// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gridGap": 10,
    }
  }
>
  <div>
    <div
      data-css-akmt2m=""
    >
      default
       
      neutral
    </div>
  </div>
  <div>
    <div
      data-css-6qp7yi=""
    >
      default
       
      green
    </div>
  </div>
  <div>
    <div
      data-css-1370srq=""
    >
      default
       
      yellow
    </div>
  </div>
  <div>
    <div
      data-css-dbjxnr=""
    >
      default
       
      red
    </div>
  </div>
  <div>
    <div
      data-css-i7yiwd=""
    >
      default
       
      blue
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gridGap": 10,
    }
  }
>
  <div>
    <div
      data-css-1imiq63=""
    >
      subtle
       
      neutral
    </div>
  </div>
  <div>
    <div
      data-css-akls3u=""
    >
      subtle
       
      green
    </div>
  </div>
  <div>
    <div
      data-css-1739nde=""
    >
      subtle
       
      yellow
    </div>
  </div>
  <div>
    <div
      data-css-1svdoaq=""
    >
      subtle
       
      red
    </div>
  </div>
  <div>
    <div
      data-css-rl0hco=""
    >
      subtle
       
      blue
    </div>
  </div>
</div>
`;
